adds transactions
